--- a/learn/templates/navbar.html
+++ b/learn/templates/navbar.html
@@ -1,11 +1,52 @@
  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="{% url 'newsToday' %}">E-learning</a>
+        <a class="navbar-brand" href="/">E-learning</a>
+          <a class="navbar-brand" href="{% url 'course_list' %}">dashboard</a>
+          <a class="navbar-brand" href="{% url 'about' %}">about</a>
+           <div class="col-sm-6 col-md-6" style="margin-left: 200px; margin-top: -40px">
+            {% if user.is_authenticated %}
+            <ul>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">categories
+                          <span class="caret"></span>
+                      </a>
+                <ul class="dropdown-menu" role="menu">
+                  <li>
+                    <a href="">Business</a>
+                  </li>
+                  <li>
+                     <a href="">Academics</a>
+                  </li>
+                  <li>
+                    <a href="/accounts/password/change">Technology</a>
+                  </li>
+                  <li>
+                    <a href="/logout">Language</a>
+                  </li>
+                   <li>
+                    <a href="/logout">Catalogue</a>
+                  </li>
+                  
+                </ul>
+              </li>
+            </ul>
+            {% else %}
+            <li>
+              <a class='btn btn-default' href="/accounts/login">Login</a>
+            </li>
+
+            {% endif %}
+            
+          </div>
+      </div>
+      <!-- search form end -->
+
+
       </div>
 
       <!-- Adding a search form  -->
-      <div class="col-sm-4 col-md-4 navbar-right">
+      <div class="col-sm-4 col-md-4 navbar-right" style="margin-top: -50px">
 
         <form class="navbar-form" role="search" action="{% url 'search_results' %}">
 
@@ -18,7 +59,7 @@
 
         </form>
         <!--The search form above-->
-    <div class="col-sm-6 col-md-6">
+    <div class="col-sm-6 col-md-6" style="margin-left: 210px;margin-top: -40px">
             {% if user.is_authenticated %}
             <ul>
               <li class="dropdown">
@@ -38,6 +79,10 @@
                   <li>
                     <a href="/logout">Logout</a>
                   </li>
+                   <li>
+                    <a href="/logout">Catalogue</a>
+                  </li>
+                  
                 </ul>
               </li>
             </ul>
