Add changes to search_results

--- a/learn/templates/search_category.html
+++ b/learn/templates/search_category.html
@@ -17,7 +17,7 @@
   {% if courses %}
     {% for course in courses %}
       <div class="col-sm-6 col-md-12">
-          <h1>{{course.first_name}}</h1>
+          <h1>{{course.category}}</h1>
       </div>
     {% endfor %}
   {% endif %}
