--- a/learn/templates/navbar.html
+++ b/learn/templates/navbar.html
@@ -4,7 +4,7 @@
         <a class="navbar-brand" href="/">E-learning</a>
           <a class="navbar-brand" href="{% url 'course_list' %}">dashboard</a>
           <a class="navbar-brand" href="{% url 'about' %}">about</a>
-           <div class="col-sm-6 col-md-6" style="margin-left: 200px; margin-top: -40px">
+           <div class="col-sm-6 col-md-6" style="margin-left: 220px; margin-top: -40px">
             {% if user.is_authenticated %}
             <ul>
               <li class="dropdown">
@@ -13,16 +13,16 @@
                       </a>
                 <ul class="dropdown-menu" role="menu">
                   <li>
-                    <a href="">Business</a>
+                    <a href="{% url 'business' %}">Business</a>
                   </li>
                   <li>
                      <a href="">Academics</a>
                   </li>
                   <li>
-                    <a href="/accounts/password/change">Technology</a>
+                    <a href="{% url 'technology' %}">Technology</a>
                   </li>
                   <li>
-                    <a href="/logout">Language</a>
+                    <a href="{% url 'language' %}">Language</a>
                   </li>
                    <li>
                     <a href="/logout">Catalogue</a>
@@ -51,7 +51,7 @@
         <form class="navbar-form" role="search" action="{% url 'search_results' %}">
 
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search Article" name="article">
+            <input type="text" class="form-control" placeholder="Search Course" name="category">
             <div class="input-group-btn">
               <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
