make changes to index.html

--- a/learn/templates/all/business.html
+++ b/learn/templates/all/business.html
@@ -2,41 +2,70 @@
 {% extends "base.html" %}
 {% block content %}
 {{block.super}}
+<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 
+<h3><strong>Business</strong></h3>
+<div class="well" style="background-color: #031428">
+<div class="row" style="margin-top: 20px; ">
+<div class="col-md-3">
+<figure>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8xFWMLOWSZFU1g3Qut6EsQF4x2EymbblcDpIhNiPYyxZK_zVd" alt="" style="width: 300px; height: 300px;border-radius: 20px"/>
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="https://www.elfaonline.org/images/default-source/page-imgs/news-img/industry-news-img/8reasonsinfographic300px.jpg?sfvrsn=8f57a80d_0" alt="" style="width: 300px; height: 300px;border-radius: 20px"/>
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcvP0LFUdsqAc4eKRgBc7Po37U74z-TI3fyq8VfBwi8GOXw0Y0" alt=""  style="width: 300px; height: 300px;border-radius: 20px" />
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQu3UNNc7VoFLn32fpijqTz-fHmIlzjIGl_03ivZL_QEk5htkiYA" style="width: 300px; height: 300px;border-radius: 20px" " alt="" />
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+</div>
+<div class="row" style="margin-top: 20px;">
+<div class="col-md-3">
+<figure>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8xFWMLOWSZFU1g3Qut6EsQF4x2EymbblcDpIhNiPYyxZK_zVd" alt="" style="width: 300px; height: 300px;border-radius: 20px"/>
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="https://www.elfaonline.org/images/default-source/page-imgs/news-img/industry-news-img/8reasonsinfographic300px.jpg?sfvrsn=8f57a80d_0" alt="" style="width: 300px; height: 300px;border-radius: 20px"/>
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcvP0LFUdsqAc4eKRgBc7Po37U74z-TI3fyq8VfBwi8GOXw0Y0" alt=""  style="width: 300px; height: 300px;border-radius: 20px" />
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQu3UNNc7VoFLn32fpijqTz-fHmIlzjIGl_03ivZL_QEk5htkiYA" style="width: 300px; height: 300px;border-radius: 20px" " alt="" />
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+</div>
+</div>
 
-<h3>Business</h3>
-<div class="row">
-<div class="col-md-3">
-<figure>
-<img src="http://assets.nydailynews.com/polopoly_fs/1.1542852.1386652602!/img/httpImage/image.jpg_gen/derivatives/article_750/178891861.jpg" alt="" />
-<figcaption><a href="/">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
-</div>
-<div class="col-md-3">
-<figure>
-<img src="http://assets.nydailynews.com/polopoly_fs/1.1542852.1386652602!/img/httpImage/image.jpg_gen/derivatives/article_750/178891861.jpg" alt="" />
-<figcaption><a href="/">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
-</div>
-<div class="col-md-3">
-<figure>
-<img src="http://assets.nydailynews.com/polopoly_fs/1.1542852.1386652602!/img/httpImage/image.jpg_gen/derivatives/article_750/178891861.jpg" alt="" />
-<figcaption><a href="/">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
-</div>
-<div class="col-md-3">
-<figure>
-<img src="http://assets.nydailynews.com/polopoly_fs/1.1542852.1386652602!/img/httpImage/image.jpg_gen/derivatives/article_750/178891861.jpg" alt="" />
-<figcaption><a href="/">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
-</div>
-</div>
 
 <style >
 	figure {
   background: red;
  overflow: hidden;
-  height: 400px;
+  height: 300px;
   width: 300px;
 }
 /* Start Frame */
