--- a/learn/templates/all/language.html
+++ b/learn/templates/all/language.html
@@ -5,10 +5,32 @@
 
 
 <h3>Languages</h3>
+<div class="row">
+<div class="col-md-3">
 <figure>
 <img src="http://assets.nydailynews.com/polopoly_fs/1.1542852.1386652602!/img/httpImage/image.jpg_gen/derivatives/article_750/178891861.jpg" alt="" />
 <figcaption><a href="/">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="https://www.augusta.edu/colleges/pamplin/english-foreign-languages/foreignlanguages/images/hanyu.png" style="width: 300px; height: 500px"  alt="" />
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRB3TlyyHuGhUHmJEBHN0eGAbUFW2Y6qlFAY72jKDg5jQ65xIO-hg" style="width: 300px; height: 500px"  alt="" />
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmE9pLqW3bYXMICrpXqSBcX8baKh8GO_tVe0SYJMyRFJTU7hLo1w" style="width: 300px; height: 500px"  alt="" />
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+
 
 <style >
 	figure {
