--- a/learn/templates/all/technology.html
+++ b/learn/templates/all/technology.html
@@ -5,11 +5,32 @@
 
 
 <h3>technology</h3>
+<div class="row">
+<div class="col-md-3">
 <figure>
 <img src="http://assets.nydailynews.com/polopoly_fs/1.1542852.1386652602!/img/httpImage/image.jpg_gen/derivatives/article_750/178891861.jpg" alt="" />
 <figcaption><a href="/">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
-
+</div>
+<div class="col-md-3">
+<figure>
+<img src="http://www.tonex.com/wp-content/uploads/Information-Technology-565x480.jpg" alt="" />
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="http://www.cdm.depaul.edu/academics/PublishingImages/heroBIT.jpg" style="width: 600px; height: 500px" alt="" />
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+<div class="col-md-3">
+<figure>
+<img src="https://ict.io/wp-content/uploads/2015/12/2026769.jpg" style="width: 370px; height: 500px" alt="" />
+<figcaption><a href="/">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse corporis nihil at sed exercitationem labore, aperiam maxime magni molestias libero inventore adipisci distinctio pariatur odit, eveniet, nulla quae, explicabo ipsa.</a></figcaption></figure>
+</div>
+</div>
 <style >
 	figure {
   background: red;
