Make changes in templates and models.py

--- a/learn/templates/navbar.html
+++ b/learn/templates/navbar.html
@@ -3,13 +3,13 @@
 
   <div class="nav">
 
-  <a><h1 title="E-learning" style="margin-top: -1px"></a>
-    <span class="span">E-</span>
-    <span>l</span>
-    <span>e</span>
-    <span>a</span>
-    <span>r</span>
-    <span>n</span>
+  <a><h1 title="GRANT" style="margin-top: -1px"></a>
+    <span class="span">G</span>
+    <span>R</span>
+    <span>A</span>
+    <span>N</span>
+    <span>T</span>
+
     
    
 
@@ -86,7 +86,7 @@
                     <a href="/">Home</a>
                   </li>
                   <li>
-                     <a href="">Create Course</a>
+                     <a href="{% url 'new_post' %}">Create Course</a>
                   </li>
                   <li>
                     <a href="/accounts/password/change">Change Password</a>
